Changed file names to tsx, configured database

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -75,14 +75,16 @@
 
     /* Advanced Options */
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
-    "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
-    
+    "forceConsistentCasingInFileNames": true,  /* Disallow inconsistently-cased references to the same file. */
+    "jsx": "react"
   },
   "include": [
+    "src/**/*.tsx",
     "src/**/*.ts",
     // "spec/**/*.ts"
   ],
   "exclude": [
     "src/public/"
-  ]
+  ],
+
 }
