--- a/env/development.env
+++ b/env/development.env
@@ -4,3 +4,12 @@ NODE_ENV=development
 # Server
 PORT=3001
 HOST=localhost
+
+
+
+
+
+DB_HOST=localhost
+DB_NAME=dcbd_react_app
+DB_USERNAME=sa
+DB_PASSWORD=root
