--- a/package.json
+++ b/package.json
@@ -36,12 +36,17 @@
     "helmet": "^4.1.1",
     "http-status-codes": "^2.1.4",
     "morgan": "^1.10.0",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.32",
     "@types/express": "^4.17.8",
     "@types/node": "^14.11.2",
+    "@types/validator": "^13.1.0",
     "nodemon": "^2.0.4",
+    "sequelize-cli": "^6.2.0",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.3"
